// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonNativeSelectOptions renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
      role="listbox"
      tabindex="-1"
    >
      <div
        tabindex="0"
      >
        <div
          class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
        >
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="1"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="2"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="3"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`NonNativeSelectOptions renders no option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
      data-testid="no-options"
      role="listbox"
      tabindex="-1"
    >
      <div
        tabindex="0"
      >
        <div
          class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
        >
          <li
            aria-disabled="true"
            class="bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 text-gray opacity-100 pointer-events"
            disabled=""
            role="menuitem"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`NonNativeSelectOptions renders option groups 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
      role="listbox"
      tabindex="-1"
    >
      <div
        tabindex="0"
      >
        <div
          class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
        >
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 makeStyles-menuGroup"
            role="option"
            tabindex="-1"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                >
                  <p
                    class="m-0 text-xxs text-graphite font-semibold"
                  >
                    Group 1
                  </p>
                </div>
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="1"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="2"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="3"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 makeStyles-menuGroup"
            role="option"
            tabindex="-1"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                >
                  <p
                    class="m-0 text-xxs text-graphite font-semibold"
                  >
                    Group 2
                  </p>
                </div>
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="4"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            class="text-black bg-[transparent] hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
            data-highlighted="false"
            role="option"
            tabindex="-1"
            value="5"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                />
              </div>
            </div>
          </li>
        </div>
      </div>
    </ul>
  </div>
</div>
`;
